--- a/CGExamples/WebFolder/index.waPage/index.html
+++ b/CGExamples/WebFolder/index.waPage/index.html
@@ -13,10 +13,11 @@
 </head>
     <body id="waf-body" data-workspace-width="0" data-workspace-orientation="portrait" data-workspace-height="0" data-viewport-width="device-width" data-viewport-minimum-scale="1.0" data-viewport-maximum-scale="1.0" data-viewport-initial-scale="1.0" data-type="document" data-theme="default" data-platform="desktop" data-lib="WAF" data-group="[]" data-apple-meta-tags-status-bar="default" class="default" style="visibility:hidden;">
     	<div id="container1" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" class="waf-widget waf-container default inherited  waf-container-level-0 waf-level-0 ">
- 		<div id="combobox1" data-type="combobox" data-limit="20" data-lib="WAF" data-label-position="top" data-label="Select Demo" data-editable="true" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoDispatch="true" class="waf-widget waf-combobox default inherited  "><select><option value="liveMessages">Live Messages</option><option value="slideInComponent">Slide In</option></select></div>
- 		<label id="label1" for="combobox1" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-label default inherited  waf-label-combobox ">Select Demo</label>
+ 		<div id="combobox1" data-type="combobox" data-limit="20" data-lib="WAF" data-label-position="top" data-label="" data-editable="true" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoDispatch="true" class="waf-widget waf-combobox default inherited  "><select><option value="liveMessages">Live Messages</option><option value="slideInComponent">Slide In</option></select></div>
+ 			<div id="richText1" data-type="richText" data-lib="WAF" class="waf-widget waf-richText default inherited " data-autoWidth="false" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-label="" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false">Select Demo:</div>
  	</div>
 		<div id="comp_main" data-type="component" data-lib="WAF" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-component default inherited  "></div>
+	
 		<script type="text/javascript" src="/waLib/WAF/Loader.js"></script>
 	</body>
 </html>
